# llm_evaluate

./: .gitignore  .gitmodules  README.md  a.py  app.py  bleu.txt.bak  pyproject.toml  rebuttal.sh  t.py  x.py  y.py  z.py
llm_evaluate/: config.yaml  config_mt.yaml  config_server.yaml  judge.py  main_eval.py  main_evaluate.py
llm_evaluate/config/: config.yaml  config_check_locate.yaml  config_mt.yaml  config_mt_server.yaml  config_server.yaml  judge.yaml
llm_evaluate/config/data/translation/: challenge_set_data_sample.yaml  challenge_set_en2zh.yaml  challenge_set_zh2en.yaml  flores_data_sample.yaml  flores_en2cs.yaml  flores_en2fi.yaml  flores_en2id.yaml  flores_en2id_dev.yaml  flores_en2ja.yaml  flores_en2th_dev.yaml  flores_en2tr.yaml  (+14 more)
llm_evaluate/dataset/: __init__.py  abstract.py  registry.py
llm_evaluate/dataset/math/: aime2024.py  aime2025.py  gsm8k.py  llm_judge.py  math500.py
llm_evaluate/dataset/translation/: __init__.py  challenge_set.py  dummy.py  flores.py  train_mixed.py  wmt24.py
llm_evaluate/logger/: __init__.py
llm_evaluate/utils/: merge_wrapper.py
llm_evaluate/utils/eval_func/: __init__.py  abstract.py  base.py  no_steps.py  recheck.py  registry.py  split.py
llm_evaluate/utils/metric/: __init__.py  abstract.py  math.py  registry.py  translation.py
llm_evaluate/vllm/: cls.py  utils.py
llm_evaluate/worker/: __init__.py  base.py
scripts/: data_process.py  judge.sh  prepare_rl.sh  run.sh  run_batch_mt.sh  run_batch_mt_server.sh  run_locate.sh  run_locate_check.sh  run_mt.sh  run_mt_server.sh  run_remote.sh
tests/: test_dataset_abs.py
(+1 files in other folders)
