[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_evaluate"
version = "0.1.0"
description = "a evaluate tool for math and translation task"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "ShenYunzhi", email = "shenyunzhi@smail.nju.edu.cn" }
]
urls = { "Homepage" = "https://github.com/dgme-syz/llm_evaluate" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent"
]

dependencies = [
    "datasets"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
